--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,7 @@
   <link rel="shortcut icon" href="./images/favicon.ico">
 
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
-  
+
   <link rel="stylesheet" href="./css/style.css">
 
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.14.1/dist/gsap.min.js"></script>
@@ -16,6 +17,7 @@
   <!-- ScrollSmoother requires ScrollTrigger -->
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.14.1/dist/ScrollSmoother.min.js"></script>
 </head>
+
 <body>
   <header>
     <div class="inner">
@@ -42,16 +44,16 @@
     </div><!--//.inner-->
   </header>
 
-  <main>  
+  <main>
     <section id="main_view">
       <div class="bg"><img src="./images/new_main.png" alt=""></div>
       <div class="contents">
         <h2>금융의 모든 것<br>토스에서 쉽고 간편하게</h2>
         <ul>
           <li><a href="#"><img src="./images/applekorea.png" alt="">
-            App Store</a></li>
+              App Store</a></li>
           <li><a href="#"><img src="./images/googleplay.png" alt="">
-            Google Play</a></li>  
+              Google Play</a></li>
         </ul>
       </div>
     </section><!--//#main_view-->
@@ -59,8 +61,8 @@
     <section id="s1">
       <div>
         <p>내 모든 금융 내역을 한눈에 조회하고 한 곳에서 관리하세요.
-이제껏 경험 못 했던 쉽고 편리한 금융 서비스,
-토스와 함께라면 당신의 일상이 새로워질 거예요.</p>
+          이제껏 경험 못 했던 쉽고 편리한 금융 서비스,
+          토스와 함께라면 당신의 일상이 새로워질 거예요.</p>
       </div>
     </section><!--//#s1-->
 
@@ -80,7 +82,7 @@
         </div>
         <div class="text">
           <p>토스에 계좌와 카드를 연결해 보세요.<br>계좌 잔액, 대출·투자 내역은 기본,<br>
-          일자별 소비와 수입까지 한 번에 볼 수 있어요</p>
+            일자별 소비와 수입까지 한 번에 볼 수 있어요</p>
         </div>
       </div><!--//.inner-->
     </section><!--//#s2-->
@@ -93,33 +95,105 @@
         </div><!--//.title-->
         <div class="box">
           <div class="text">
-            <p><i><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="m1.49 1.49h21.02v21.02h-21.02z" fill="none"></path><path d="m15.72 9.3-1.62 5.87c-.05.18-.3.18-.35 0l-1.58-5.74c-.05-.18-.3-.18-.35 0l-1.58 5.74c-.05.18-.3.18-.35 0l-1.62-5.87m6.61 3h2.36m-8.14 0h-2.36" fill="none" stroke="#007ff2" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.58"></path><circle cx="12" cy="3.22" fill="#4d9cff" r="1.73"></circle><circle cx="4.39" cy="7.61" fill="#74b6ff" r="1.73"></circle><circle cx="4.39" cy="16.4" fill="#007ff2" r="1.73"></circle><circle cx="12" cy="20.78" fill="#4d9cff" r="1.73"></circle><circle cx="19.61" cy="16.39" fill="#74b6ff" r="1.73"></circle><circle cx="19.61" cy="7.6" fill="#007ff2" r="1.73"></circle></svg></i>
+            <p><i><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                  <path d="m1.49 1.49h21.02v21.02h-21.02z" fill="none"></path>
+                  <path
+                    d="m15.72 9.3-1.62 5.87c-.05.18-.3.18-.35 0l-1.58-5.74c-.05-.18-.3-.18-.35 0l-1.58 5.74c-.05.18-.3.18-.35 0l-1.62-5.87m6.61 3h2.36m-8.14 0h-2.36"
+                    fill="none" stroke="#007ff2" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.58">
+                  </path>
+                  <circle cx="12" cy="3.22" fill="#4d9cff" r="1.73"></circle>
+                  <circle cx="4.39" cy="7.61" fill="#74b6ff" r="1.73"></circle>
+                  <circle cx="4.39" cy="16.4" fill="#007ff2" r="1.73"></circle>
+                  <circle cx="12" cy="20.78" fill="#4d9cff" r="1.73"></circle>
+                  <circle cx="19.61" cy="16.39" fill="#74b6ff" r="1.73"></circle>
+                  <circle cx="19.61" cy="7.6" fill="#007ff2" r="1.73"></circle>
+                </svg></i>
               평생 무료 송금</p>
-            <p>토스 평생 무료송금으로<br>모두의 금융에 자유를</p>  
+            <p>토스 평생 무료송금으로<br>모두의 금융에 자유를</p>
             <p>누구에게 보내든 은행 상관 없이,<br>이제 토스와 함께 수수료 걱정 없이 송금하세요.</p>
           </div>
           <p class="img"><img src="./images/section1_2_01_re.png" alt=""></p>
         </div><!--//.box-->
         <div class="box">
           <div class="text">
-            <p><i><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="m10.583.871-6.8 2.79c-1.12.46-1.86 1.56-1.86 2.77v7.06c0 3.55 4.16 7 8.36 9.32.89.49 1.98.49 2.87 0 4.2-2.32 8.36-5.77 8.36-9.32v-7.06c0-1.22-.73-2.31-1.86-2.77l-6.79-2.79c-.73-.3-1.55-.3-2.28 0z" fill="#3180f3"></path><path d="m7.218 10.846 3.42 3.42 5.58-5.59" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="2.2"></path></svg></i>
+            <p><i><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="m10.583.871-6.8 2.79c-1.12.46-1.86 1.56-1.86 2.77v7.06c0 3.55 4.16 7 8.36 9.32.89.49 1.98.49 2.87 0 4.2-2.32 8.36-5.77 8.36-9.32v-7.06c0-1.22-.73-2.31-1.86-2.77l-6.79-2.79c-.73-.3-1.55-.3-2.28 0z"
+                    fill="#3180f3"></path>
+                  <path d="m7.218 10.846 3.42 3.42 5.58-5.59" fill="none" stroke="#fff" stroke-linecap="round"
+                    stroke-linejoin="round" stroke-width="2.2"></path>
+                </svg></i>
               사기계좌 조회</p>
-            <p>송금 전 사기 내역 조회로<br>피해를 미리 방지할 수 있어요</p>  
+            <p>송금 전 사기 내역 조회로<br>피해를 미리 방지할 수 있어요</p>
             <p>송금 전 토스가 알아서 사기 내역 조회를 해드려요.<br>상대방의 연락처 또는 계좌가 사기 계좌인지 조회해<br>안전하게 송금할 수 있어요.</p>
           </div>
           <p class="img"><img src="./images/section1_2_02.png" alt=""></p>
         </div><!--//.box-->
         <div class="box">
           <div class="text">
-            <p><i><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class=" "><g fill-rule="evenodd" clip-rule="evenodd"><path d="M12 2.5c-5.2 0-9.5 4.3-9.5 9.5s4.3 9.5 9.5 9.5 9.5-4.3 9.5-9.5-4.3-9.5-9.5-9.5m0 21C5.7 23.5.5 18.3.5 12S5.7.5 12 .5 23.5 5.7 23.5 12 18.3 23.5 12 23.5" fill="#afb7c0"></path><path d="M12 2.5c-5.2 0-9.5 4.3-9.5 9.5s4.3 9.5 9.5 9.5 9.5-4.3 9.5-9.5-4.3-9.5-9.5-9.5" fill="#fff"></path><path d="M7.3 15.9c-.3 0-.6-.2-.8-.4-.3-.5-.2-1.1.3-1.4l4.7-3.2c.5-.3 1.1-.2 1.4.3.3.5.2 1.1-.3 1.4l-4.7 3.1c-.2.2-.4.2-.6.2" fill="#ef4452"></path><path d="M12 12.8c-.6 0-1-.4-1-1V6.6c0-.6.4-1 1-1s1 .4 1 1v5.2c0 .5-.4 1-1 1" fill="#4e5968"></path></g></svg></i>
+            <p><i><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class=" ">
+                  <g fill-rule="evenodd" clip-rule="evenodd">
+                    <path
+                      d="M12 2.5c-5.2 0-9.5 4.3-9.5 9.5s4.3 9.5 9.5 9.5 9.5-4.3 9.5-9.5-4.3-9.5-9.5-9.5m0 21C5.7 23.5.5 18.3.5 12S5.7.5 12 .5 23.5 5.7 23.5 12 18.3 23.5 12 23.5"
+                      fill="#afb7c0"></path>
+                    <path d="M12 2.5c-5.2 0-9.5 4.3-9.5 9.5s4.3 9.5 9.5 9.5 9.5-4.3 9.5-9.5-4.3-9.5-9.5-9.5"
+                      fill="#fff"></path>
+                    <path
+                      d="M7.3 15.9c-.3 0-.6-.2-.8-.4-.3-.5-.2-1.1.3-1.4l4.7-3.2c.5-.3 1.1-.2 1.4.3.3.5.2 1.1-.3 1.4l-4.7 3.1c-.2.2-.4.2-.6.2"
+                      fill="#ef4452"></path>
+                    <path d="M12 12.8c-.6 0-1-.4-1-1V6.6c0-.6.4-1 1-1s1 .4 1 1v5.2c0 .5-.4 1-1 1" fill="#4e5968"></path>
+                  </g>
+                </svg></i>
               자동이체 예약</p>
-            <p>은행 점검 시간,<br>기다릴 필요 없어요</p>  
+            <p>은행 점검 시간,<br>기다릴 필요 없어요</p>
             <p>은행 점검 시간에는 자동이체 예약을 이용해보세요.<br>점검 시간이 끝나면 토스가 알아서 송금해드릴게요.</p>
           </div>
           <p class="img"><img src="./images/section1_2_03.png" alt=""></p>
         </div><!--//.box-->
       </div><!--//.inner-->
     </section><!--//#s3-->
+
+    <section id="s7">
+      <div class="bg_box">
+        <p>꼭 필요했던 금융</p>
+      </div>
+      <div class="inner">
+        <div class="text1">
+          금융을 넘어<br>일상을 더 편리하게
+        </div>
+        <div class="img1">
+          <img src="./images/section2_1_document.jpg" alt="">
+        </div>
+        <div class="text2">
+          <p class="t1">세금 납부, 등본 발급까지</p>
+          <p class="t2">토스로 한 번에</p>
+          <p class="t3">놓치기 쉬운 세금 납부 및 환급은 물론<br>
+            발급을 받을 때마다 귀찮았던 주민등록 등초본까지.<br>
+            이제 토스로 편하게 신청하고 받아보세요.</p>
+        </div>
+        <article class="box1">
+          <div class="img2"><img src="./images/section2_2_insu_01.jpg" alt=""></div>
+          <div class="img3">
+            <p><img src="./images/section2_2_insu_02.jpg" alt=""></p>
+            <p class="t3">또래보다 보험료는 적절하게 내고 있는지,<br>낸 만큼 보장받고 있는지 확인해 보세요.<br>
+              전문가와의 상담을 통해 내게 딱 맞는 보험을<br>추천 받고, 병원비를 간편하게 청구할 수<br>있어요.</p>
+          </div>
+        </article>
+        <div class="text3">
+          <p class="t1">보험</p>
+          <p class="t2">조회부터 상담,<br>병원비 돌려받기를 간편하게</p>
+        </div>
+        <div class="img4"><img src="./images/section2_3_apt_01.jpg" alt=""></div>
+        <div class="text4">
+          <div>
+            <p class="t1">내 부동산 · 자동차</p>
+            <p class="t2">정기적으로 관리해보세요</p>
+          </div>
+          <p class="t3">집과 자동차의 공통점은 잘 사서, 잘 관리하고, 잘 팔아야 한다는 것.<br>
+            시세조회부터 아파트 관리비 납부, 자동차 보험료 조회까지 부동산과<br> 자동차 관리도 토스에서 시작해 보세요.</p>
+        </div>
+      </div>
+    </section>
 
 
 
@@ -131,4 +205,5 @@
 
   <script src="./js/script.js"></script>
 </body>
+
 </html>
